# nearnames

./: .gitignore  CNAME  MARKETPLACE_API.md  README.md  global.601c8f29.css  global.601c8f29.css.map  global.8ef0d3a9.css  global.8ef0d3a9.css.map  global.b3441eba.css  global.b3441eba.css.map  global.b3441eba.js  global.b3441eba.js.map  global.b39f6e07.css  global.b93bd9b2.css  global.b93bd9b2.css.map  index.014bde62.js  index.05a3c093.js  index.05a3c093.js.map  index.05d903dd.js  index.05d903dd.js.map  index.06868fd0.css  index.06868fd0.css.map  index.08bfd8af.css  index.08bfd8af.css.map  index.0abd2438.js  index.0abd2438.js.map  index.0f303d27.css  index.0f303d27.css.map  index.106b6772.css  index.106b6772.css.map  index.106e46ca.js  index.106e46ca.js.map  index.16b42fd0.js  index.16b42fd0.js.map  index.197e9c37.js  index.1c404f8a.js  index.1c404f8a.js.map  index.1fb639fb.css  index.1fb639fb.css.map  index.22254459.js  (+132 more)
.github/workflows/: contract.yml
contract/: .gitignore  2  Cargo.toml  Dockerfile  HASHES.md  README.md  backlog.md  build.sh  docker_build.sh  docker_run.sh  test.sh
contract/res/: marketplace_v0_1cc26c9a06907508cd05822f3c76c41f82dd3feb7f757076258b9f5040292d94.wasm  (+2 more)
contract/scripts/: lot_offer.js
frontend/: .gitignore  package-lock.json  package.json
lock_unlock_account_contract/: Cargo.toml  Dockerfile  HASHES.md  README.md  build.sh  docker_build.sh  docker_run.sh  minify.sh
lock_unlock_account_contract/res/: lock_unlock_account_latest.wasm  lock_unlock_account_v1.wasm
lock_unlock_account_contract/src/: lib.rs
src/: App.js  config.js
(+49 files in other folders)
