[package]
name = "lock-unlock-account"
version = "0.1.0"
authors = ["Alex Kouprin <kpr@near.org>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "=4.0.0-pre.5"

[profile.release]
codegen-units=1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
